<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/layout_auth"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/primary_dark_emerald"
tools:context=".auth.Authorization">

<ImageView
    android:layout_width="265dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:scaleType="center"
    android:src="@drawable/logo"/>
<TextView
    android:text="@string/authorize_account"
    android:fontFamily="@font/nunito"
    android:textAlignment="center"
    android:textSize="22sp"
    android:textStyle="bold"
    android:textColor="@color/primary_light_blue"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
<androidx.cardview.widget.CardView
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editMail"
            android:fontFamily="@font/nunito"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/editPassword"
            android:fontFamily="@font/nunito"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>
<Button
    android:id="@+id/button_auth"
    android:fontFamily="@font/nunito"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:textColor="@color/primary_text_button"
    android:textSize="16sp"
    android:textStyle="bold"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:backgroundTint="@color/primary_coral"
    android:text="Авторизироваться" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">
        <TextView
            android:fontFamily="@font/nunito"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_to_here"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/primary_light_blue"/>
        <TextView
            android:id="@+id/link_register"
            android:fontFamily="@font/nunito"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/primary_light_blue"/>
    </LinearLayout>

</LinearLayout>