<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_reg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/primary_dark_emerald"

        tools:context=".auth.Registration">


    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primary_dark_emerald"
        android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:layout_marginTop="130dp"
            android:fontFamily="@font/nunito"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/primary_light_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editLogin"
                    android:fontFamily="@font/nunito"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_username"
                    android:textStyle="italic"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />
                <EditText
                    android:id="@+id/editMail"
                    android:fontFamily="@font/nunito"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email"
                    android:textStyle="italic"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />
                <EditText
                    android:id="@+id/editPassword"
                    android:fontFamily="@font/nunito"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:textStyle="italic"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/button_reg"
            android:fontFamily="@font/nunito"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text_button"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/primary_coral"
            android:text="Зарегистрироваться" />
    </LinearLayout>